--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
   <section class="section" id="contact">
     <h2>Contact Us</h2>
-    <p>Email: info@aecm.sa</p>
+    <p>Email: adv.edu.creativity@gmail.com</p>
     <p>Phone: +966-54-126-6395</p>
     <p>Location: Riyadh, Kingdom of Saudi Arabia</p>
   </section>
