--- a/index.html
+++ b/index.html
@@ -86,14 +86,40 @@
     </ul>
   </section>
 
-  <section class="section" id="projects">
-    <h2>Our Projects</h2>
-    <div class="project">
-      <h3>Innovative Preschool – Riyadh</h3>
-      <p>A bilingual kindergarten (Arabic-English) integrating STEAM education and Islamic values. Located in Al Yasmin, North Riyadh, Innovative Preschool prepares children for a future of creativity, character, and academic success while supporting Vision 2030 goals in education and female workforce empowerment.</p>
-    </div>
-    <!-- Add more projects as needed -->
-  </section>
+<section class="section" id="projects">
+  <h2>Our Projects & Programs</h2>
+
+  <div class="project">
+    <h3>Innovative Preschool – Riyadh</h3>
+    <p>A bilingual kindergarten integrating STEAM education and Islamic values. Located in Al Yasmin, North Riyadh, Innovative Preschool prepares children for a future of creativity, character, and academic success, supporting Vision 2030 educational goals.</p>
+  </div>
+
+  <div class="project">
+    <h3>Mine Awareness Seminar</h3>
+    <p>Organized in partnership with Norwegian People's Aid and City University – Tyre branch, this seminar raised awareness among youth about the dangers of landmines and cluster bombs, and educated them on safety protocols and reporting mechanisms.</p>
+  </div>
+
+  <div class="project">
+    <h3>"أدباء واعدون" Literary Competition</h3>
+    <p>A major writing competition for high school students across South Lebanon in poetry, essays, and short stories, held in collaboration with the Lebanese Writers Union and the Lebanese Ministry of Education to promote citizenship, cultural identity, and creative expression.</p>
+  </div>
+
+  <div class="project">
+    <h3>UNIFIL Partnership Meeting</h3>
+    <p>A strategic dialogue with the UNIFIL Commander focused on launching joint educational, developmental, and cultural activities that enhance peacekeeping and civil-society relations.</p>
+  </div>
+
+  <div class="project">
+    <h3>"ارجوان" National School Folklore Festival</h3>
+    <p>The largest school-based folklore event in South Lebanon, featuring over 800 students from 22 schools. Organized with City University and the Municipality of Tyre under the patronage of the Minister of Culture and attended by over 5,000 people.</p>
+  </div>
+
+  <div class="project">
+    <h3>UN General Assembly Simulation</h3>
+    <p>A civic education program simulating the United Nations Assembly to advocate for Lebanon's oil rights. Held at City University in 2022, this event introduced students to international diplomacy and national resource protection.</p>
+  </div>
+</section>
+
 
   <section class="section" id="contact">
     <h2>Contact Us</h2>
