--- a/index.html
+++ b/index.html
@@ -93,38 +93,45 @@
     <h3>Innovative Preschool – Riyadh</h3>
     <img src="images/innovative_preschool.jpg" alt="Innovative Preschool" style="width:100%;max-width:400px">
     <p>A bilingual kindergarten integrating STEAM education and Islamic values. Located in Al Yasmin, North Riyadh, Innovative Preschool prepares children for a future of creativity, character, and academic success, supporting Vision 2030 educational goals.</p>
+    <a href="#" class="btn">Media Coverage</a>
   </div>
 
   <div class="project">
     <h3>Mine Awareness Seminar</h3>
     <img src="images/mine_awareness.jpg" alt="Mine Awareness Seminar" style="width:100%;max-width:400px">
     <p>Organized in partnership with Norwegian People's Aid and City University – Tyre branch, this seminar raised awareness among youth about the dangers of landmines and cluster bombs, and educated them on safety protocols and reporting mechanisms.</p>
+    <a href="#" class="btn">Media Coverage</a>
   </div>
 
   <div class="project">
     <h3>"أدباء واعدون" Literary Competition</h3>
     <img src="images/literary_competition.jpg" alt="أدباء واعدون" style="width:100%;max-width:400px">
     <p>A major writing competition for high school students across South Lebanon in poetry, essays, and short stories, held in collaboration with the Lebanese Writers Union and the Lebanese Ministry of Education to promote citizenship, cultural identity, and creative expression.</p>
+    <a href="#" class="btn">Media Coverage</a>
   </div>
 
   <div class="project">
     <h3>UNIFIL Partnership Meeting</h3>
     <img src="images/unifil_meeting.jpg" alt="UNIFIL Partnership Meeting" style="width:100%;max-width:400px">
     <p>A strategic dialogue with the UNIFIL Commander focused on launching joint educational, developmental, and cultural activities that enhance peacekeeping and civil-society relations.</p>
+    <a href="#" class="btn">Media Coverage</a>
   </div>
 
   <div class="project">
     <h3>"ارجوان" National School Folklore Festival</h3>
     <img src="images/orjouwan_festival.jpg" alt="ارجوان Festival" style="width:100%;max-width:400px">
     <p>The largest school-based folklore event in South Lebanon, featuring over 800 students from 22 schools. Organized with City University and the Municipality of Tyre under the patronage of the Minister of Culture and attended by over 5,000 people.</p>
+    <a href="#" class="btn">Media Coverage</a>
   </div>
 
   <div class="project">
     <h3>UN General Assembly Simulation</h3>
     <img src="images/un_simulation.jpg" alt="UN Assembly Simulation" style="width:100%;max-width:400px">
     <p>A civic education program simulating the United Nations Assembly to advocate for Lebanon's oil rights. Held at City University in 2022, this event introduced students to international diplomacy and national resource protection.</p>
+    <a href="#" class="btn">Media Coverage</a>
   </div>
 </section>
+
 
 
 
